Next
  - Updated SDL2 library to version 2.32.4 (maron2000)
  - Fixed a build/install error due to using wildcards in Makefile.am, which is
    not supported in GNU Automake. (maron2000)
  - macOS: Install SDL2_net in CI workflow to enable internal modem support on
    Release and Nightly SDL2 builds. (maron2000)
  - Fixed buffer size to allocate missing byte for string terminator for 
    savestate filename to prevent buffer overflow (arifogel)
  - Fixed settings of yellow color in COLOR command (maron2000)
  - Fixed COLOR command to match behavior on Windows (maron2000)
  - Fixed INT21h AH=0a cursor position moved by bell due to keyboard buffer full
    (maron2000)
  - Fixed INT21h AH=01 echo behavior (maron2000)
  - Replaced SetPixel with DIB Section Direct Memory Access for faster printing
    (DwayneSelsig)
  - Fixed creation of overlay special files (zyebytevt)
  - PC-98 mode: Add INT 18h function AH=10h to control cursor blink.
    Emulate documented side effect in that this call also hides the
    cursor. The PC-98 port of Lemmings will no longer show a blinking
    black box in the lower left corner. (joncampbell123)
  - Fixed Host key (F11, F12) handling in Codepage 932 (Japanese Shift-JIS).
    (maron2000)
  - Bumped ESFMu to ver 1.2.6 (maron2000)
  - Fixed regression of adding a dot to CD labels when longer than 8 characters,
    required for games such as Descent 2 CD installer (maron2000)
  - Added Modeswitch toggle option (DieSkaarj)
  - Fixed glitch of DBCS character at the end of a line (maron2000)
  - Fixed dialog for showing error of loading language files (maron2000)
  - Removed two and 226 duplicate Chinese character mappings from code
    pages 950 and 951, respectively, ensuring more accurate Big5 and
    Big5-UAO character mappings for Chinese IME users. (1abcd)
  - Enabled changing drives mounted prior to switching to securemode (maron2000)
  - Enabled some messages to be translated in the translation files (maron2000)